# PodToBUILD

./: .gitignore  .travis.yml  BUILD  BuildReleases.sh  Gemfile  MakeGoldMaster.sh  Makefile  Package.resolved  Package.swift  README.md  RedundantCompiledSourceTransform.swift  WORKSPACE  notes.txt
BazelExtensions/: BUILD  acknowledgement_merger.py  extensions.bzl  headermap_builder.py  headermap_tool.py  process_ipa.py  workspace.bzl
Examples/: .gitattributes  .gitignore  1PasswordExtension.podspec.json  AsyncDisplayKit.podspec.json  Example.Makefile  FLAnimatedImage.podspec.json  FolioReaderKit.podspec.json  PINCrypto.podspec.json  PINFoundation.podspec.json  PINModelRuntime.podspec.json  PINRemoteImage.podspec.json  PINThrift.podspec.json  PaymentKit.podspec.json  README.md  React.0.57.0.podspec.json  SPUserResizableView+Pion.podspec.json  Smartling.podspec.json  Texture.podspec.json  glog.podspec.json
IntegrationTests/: .gitattributes  README.md  RunTests.sh
IntegrationTests/Acknowlegements/: BUILD.bazel  acknowledgement1.plist  acknowledgement2.plist
PodSpecToBUILD/: PodSpecToBUILD-Bridging-Header.h  PodSpecToBUILDTests-Bridging-Header.h
PodSpecToBUILD-Framework/: Info.plist  PodSpecToBUILD-Framework.h
PodSpecToBUILD.xcodeproj/: project.pbxproj
PodSpecToBUILD.xcworkspace/: contents.xcworkspacedata
PodSpecToBUILDTests/: AcknowledgementPlistTests.swift  BasicBuildOptionsTest.swift  BuildFileTests.swift  GlobTests.swift  MagmasTests.swift  ParserTests.swift  PodStoreTests.swift  ShellTaskTest.swift  SkylarkTests.swift  TestUtils.swift  (+2 more)
(+270 files in other folders)
